# catcheye-capture

./: .gitmodules  CMakeLists.txt  README.md
cmake/: catcheye-capture-launcher.sh.in
docker/amd64/: Dockerfile  docker-compose.dev.yml
docker/arm64/: Dockerfile  docker-compose.dev.yml
docs/: API.md
include/catcheye/hardware/: gpio_signal_config.hpp
scripts/: catcheye-capture.service  cmake.sh  run.sh  sync-compile-commands.sh
src/: main.cpp
src/capture/: app.cpp  app.hpp  camera_properties.cpp  camera_properties.hpp  frame_conversion.cpp  frame_conversion.hpp  http_api_server.cpp  http_api_server.hpp  processor.cpp  processor.hpp  recording_controller.cpp  recording_controller.hpp  signal.cpp  signal.hpp
tests/: capture_tests.cpp
